k8s/namespaces/development/llamacpp/gpt-oss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: llamacpp-gpt-oss
  namespace: development
  labels:
    app.kubernetes.io/name: llamacpp-gpt-oss
spec:
  ports:
  - name: llamacpp-gpt-oss
    port: 8000
    protocol: TCP
    targetPort: 8000
  - name: llamacpp-embedding
    port: 8001
    protocol: TCP
    targetPort: 8001
  - name: llamacpp-reranker
    port: 8002
    protocol: TCP
    targetPort: 8002
  selector:
    app.kubernetes.io/name: llamacpp-gpt-oss
  sessionAffinity: None
  type: ClusterIP
