k8s/namespaces/development/llamacpp/gpt-oss/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: llamacpp-gpt-oss
  namespace: development
  labels:
    app.kubernetes.io/name: llamacpp-gpt-oss
    app.kubernetes.io/managed-by: flux
spec:
  parentRefs:
    - name: nginx-gateway
      namespace: ingress
      sectionName: https
  hostnames:
    - "gpt-oss.hosted.fail"
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.nginx.org
            kind: SnippetsFilter
            name: internal-whitelist
      backendRefs:
        - name: llamacpp-gpt-oss
          port: 8000
